--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ import '../styles/global.css'
 				<LiquidText blur={1} chromaticAberration={4}>OR</LiquidText>
 			</div>
 			<LiquidButton w={300} h={60} morph>
-				<a href="/docs" class="text-2xl font-normal text-white">Read Documentation</a>
+				<a href="/docs" class="text-2xl font-normal text-black/70">Read Documentation</a>
 			</LiquidButton>
 			<LiquidGlass
 				width={655}
