--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,8 +74,8 @@ import '../styles/global.css'
 				chromaticAberration={2}
 				color='white'
 			>
-				<div class="p-8 px-11 text-[63px] leading-none font-extrabold">
-					<LiquidText blur={1} chromaticAberration={4} color="black">IOS LIQUID GLASS</LiquidText>
+				<div class="p-8 px-11 text-[63px] leading-none font-extrabold text-black/75">
+					IOS LIQUID GLASS
 				</div>
 			</LiquidGlass>
 			<LiquidGlass
@@ -87,18 +87,18 @@ import '../styles/global.css'
 				chromaticAberration={2}
 				color='transparent'
 			>
-				<div class="p-8 px-11 text-8xl font-black">
-					<LiquidText blur={1} chromaticAberration={4} color="transparent">NIK DELVIN</LiquidText>
+				<div class="p-8 px-11 text-8xl font-black text-black/75">
+					NIK DELVIN
 				</div>
 			</LiquidGlass>
-			<LiquidButton w={300} h={60}>
-				<a href="https://github.com/nikdelvin/liquid-glass" target="_blank" class="text-2xl font-normal text-white">Contribute on GitHub</a>
+			<LiquidButton w={295} h={60} color='white'>
+				<a href="https://github.com/nikdelvin/liquid-glass" target="_blank" class="text-2xl font-normal text-black/75">Contribute on GitHub</a>
 			</LiquidButton>
-			<div class="text-4xl font-black">
-				<LiquidText blur={1} chromaticAberration={4}>OR</LiquidText>
-			</div>
-			<LiquidButton w={300} h={60} morph>
-				<a href="/docs" class="text-2xl font-normal text-black/70">Read Documentation</a>
+			<LiquidButton w={261} h={60}>
+				<a href="https://blog.by.nikdelv.in/ios-liquid-glass-effect-css-only" target="_blank" class="text-2xl font-normal text-black/75">Read my blog post</a>
+			</LiquidButton>
+			<LiquidButton w={286} h={60} color='black'>
+				<a href="/docs" class="text-2xl font-normal text-white/90">Read documentation</a>
 			</LiquidButton>
 			<LiquidGlass
 				width={655}
@@ -109,8 +109,8 @@ import '../styles/global.css'
 				chromaticAberration={2}
 				color='black'
 			>
-				<div class="p-8 px-11 text-[64px] leading-none font-extrabold">
-					<LiquidText blur={1} chromaticAberration={4} color="white">PURE CSS EFFECT</LiquidText>
+				<div class="p-8 px-11 text-[64px] leading-none font-extrabold text-white/90">
+					PURE CSS EFFECT
 				</div>
 			</LiquidGlass>
 		</div>
